Change urls from 127.0.0.1 to localhost